19. unora JOIN- bude v testu vro

--- a/08 - Join_joinTriTabulek_zadani.ipynb
+++ b/08 - Join_joinTriTabulek_zadani.ipynb
@@ -46,20 +46,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "Vt-YvcHE40as"
       },
       "outputs": [],
       "source": [
         "import mysql.connector\n",
-        "\n",
+        "from pripojeni import*\n",
         "mydb = mysql.connector.connect(\n",
-        "    host = \"dbs.spskladno.cz\"\n",
-        "    ,user = \"rekne_ucitel\"\n",
-        "    ,password = \"rekne_ucitel\"\n",
-        "    ,database = \"zavisi_na_useru\"\n",
+        "    host = HOST\n",
+        "    ,user = USER\n",
+        "    ,password = PASSWORD\n",
+        "    ,database = DATABASE\n",
         ")\n",
+        "\n",
         "\n",
         "mycursor = mydb.cursor()\n",
         "\n",
@@ -162,30 +163,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "wCUzjDEC40a5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "=========\n",
+            "Hráč Prvni, s datem narození 1996-06-02 z týmu HC Slavie v městě Praha\n",
+            "Hráč Druhy, s datem narození 2000-09-09 z týmu HC Rytíři v městě Kladno\n",
+            "Hráč Treti, s datem narození 1998-01-05 z týmu HC Sparta v městě Praha\n",
+            "Hráč Pátý, s datem narození 1999-03-08 z týmu HC Slavie v městě Praha\n"
+          ]
+        }
+      ],
       "source": [
         "import mysql.connector\n",
-        "\n",
+        "from pripojeni import*\n",
         "mydb = mysql.connector.connect(\n",
-        "    host = \"dbs.spskladno.cz\"\n",
-        "    ,user = \"rekne_ucitel\"\n",
-        "    ,password = \"rekne_ucitel\"\n",
-        "    ,database = \"zavisi_na_useru\"\n",
-        ")  \n",
+        "    host = HOST\n",
+        "    ,user = USER\n",
+        "    ,password = PASSWORD\n",
+        "    ,database = DATABASE\n",
+        ")\n",
+        " \n",
         "mycursor = mydb.cursor()\n",
         "\n",
         "# bez zadané podmínky a sloupečků s hodnotami k porovnání\n",
-        "mycursor.execute(\"\"\"SELECT prijmeni, datum_narozeni, tym.nazev, mesto FROM Hrac INNER JOIN Tym;\n",
-        "\"\"\") # Tento příkaz vypíše kombinace každého hráče s každým týmem.\n",
         "\n",
-        "myresult = mycursor.fetchall()\n",
         "\n",
-        "for prijmeni, datum_narozeni, nazev, mesto in myresult:\n",
-        "    print(f\"Hráč {prijmeni}, s datem narození {datum_narozeni} z týmu {nazev} v městě {mesto}\")\n",
         "\n",
         "print(\"=========\")\n",
         "# Tento JOIN je nám však k ničemu, protože neposkytuje žádné informace\n",
@@ -414,23 +423,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "r74PhEvi40bY"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hráč Adam Prvni má pozici Obrana\n",
+            "Hráč Pavel Druhy má pozici Brankar\n",
+            "Hráč Kuba Treti má pozici Utocnik\n",
+            "Hráč Josef Čtvrtý má pozici Obrana\n"
+          ]
+        }
+      ],
       "source": [
         "import mysql.connector\n",
-        "\n",
+        "from pripojeni import*\n",
         "mydb = mysql.connector.connect(\n",
-        "    host = \"dbs.spskladno.cz\"\n",
-        "    ,user = \"rekne_ucitel\"\n",
-        "    ,password = \"rekne_ucitel\"\n",
-        "    ,database = \"zavisi_na_useru\"\n",
+        "    host = HOST\n",
+        "    ,user = USER\n",
+        "    ,password = PASSWORD\n",
+        "    ,database = DATABASE\n",
         ")\n",
-        "mycursor = mydb.cursor()\n",
         "\n",
-        "# TODO: Zde přijde váš kód ->\n",
+        "mycursor = mydb.cursor()\n",
+        "mycursor.execute(\"\"\"SELECT jmeno, prijmeni, pojmenovani FROM Hrac JOIN Pozice\n",
+        "    ON Hrac.pozice_id = Pozice.id_poz;\n",
+        "\"\"\")\n",
+        "\n",
+        "myresult = mycursor.fetchall()\n",
+        "\n",
+        "for jmeno, prijmeni, pojmenovani, in myresult:\n",
+        "    print(f\"Hráč {jmeno} {prijmeni} má pozici {pojmenovani}\")\n",
+        "\n",
         "\n",
         "\n",
         "mycursor.close()\n",
@@ -466,24 +494,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "sbZs74hw40be"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hráč Adam Prvni má pozici Obrana\n",
+            "Hráč Pavel Druhy má pozici Brankar\n",
+            "Hráč Kuba Treti má pozici Utocnik\n",
+            "Hráč Josef Čtvrtý má pozici Obrana\n",
+            "Hráč Jirka Pátý má pozici None\n"
+          ]
+        }
+      ],
       "source": [
         "import mysql.connector\n",
-        "\n",
+        "from pripojeni import*\n",
         "mydb = mysql.connector.connect(\n",
-        "    host = \"dbs.spskladno.cz\"\n",
-        "    ,user = \"rekne_ucitel\"\n",
-        "    ,password = \"rekne_ucitel\"\n",
-        "    ,database = \"zavisi_na_useru\"\n",
+        "    host = HOST\n",
+        "    ,user = USER\n",
+        "    ,password = PASSWORD\n",
+        "    ,database = DATABASE\n",
         ")\n",
+        "\n",
         "mycursor = mydb.cursor()\n",
         "\n",
-        "# TODO: Zde přijde váš kód ->\n",
+        "# LEFT JOIN výsledek uzná, i pokud existuje pouze levá část vazby (zde Tym)\n",
+        "# a pravá (ta připojovaná, zde Hrac) neexistuje. Do hodnot sloupců z připojované části se vloží NULL.\n",
+        "# Levá a pravá část vazby se rozlišuje podle toho kde se název tabulky nachází vzhledem k JOINu.\n",
+        "mycursor.execute(\"\"\"SELECT jmeno, prijmeni, pojmenovani FROM\n",
+        "    Hrac LEFT JOIN Pozice ON Hrac.pozice_id = Pozice.id_poz;\n",
+        "\"\"\")\n",
         "\n",
+        "myresult = mycursor.fetchall()\n",
+        "\n",
+        "for jmeno, prijmeni, pojmenovani in myresult:\n",
+        "    print(f\"Hráč {jmeno} {prijmeni} má pozici {pojmenovani}\")\n",
         "\n",
         "mycursor.close()\n",
         "mydb.close()"
@@ -519,26 +569,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "LY-7Rdn840bj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hráč Adam Prvni má pozici Obrana\n",
+            "Hráč Pavel Druhy má pozici Brankar\n",
+            "Hráč Kuba Treti má pozici Utocnik\n",
+            "Hráč Josef Čtvrtý má pozici Obrana\n",
+            "Hráč None None má pozici Zaloha\n"
+          ]
+        }
+      ],
       "source": [
         "import mysql.connector\n",
-        "\n",
+        "from pripojeni import*\n",
         "mydb = mysql.connector.connect(\n",
-        "    host = \"dbs.spskladno.cz\"\n",
-        "    ,user = \"rekne_ucitel\"\n",
-        "    ,password = \"rekne_ucitel\"\n",
-        "    ,database = \"zavisi_na_useru\"\n",
+        "    host = HOST\n",
+        "    ,user = USER\n",
+        "    ,password = PASSWORD\n",
+        "    ,database = DATABASE\n",
         ")\n",
+        "\n",
         "mycursor = mydb.cursor()\n",
         "\n",
-        "# TODO: Zde přijde váš kód ->\n",
+        "# LEFT JOIN výsledek uzná, i pokud existuje pouze levá část vazby (zde Tym)\n",
+        "# a pravá (ta připojovaná, zde Hrac) neexistuje. Do hodnot sloupců z připojované části se vloží NULL.\n",
+        "# Levá a pravá část vazby se rozlišuje podle toho kde se název tabulky nachází vzhledem k JOINu.\n",
+        "mycursor.execute(\"\"\"SELECT jmeno, prijmeni, pojmenovani FROM\n",
+        "    Hrac RIGHT JOIN Pozice ON Hrac.pozice_id = Pozice.id_poz;\n",
+        "\"\"\")\n",
+        "\n",
+        "myresult = mycursor.fetchall()\n",
+        "\n",
+        "for jmeno, prijmeni, pojmenovani in myresult:\n",
+        "    print(f\"Hráč {jmeno} {prijmeni} má pozici {pojmenovani}\")\n",
         "\n",
         "mycursor.close()\n",
-        "mydb.close()"
+        "mydb.close()\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -571,24 +646,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "H1YCy5z-40bq"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hráč s id 1 Adam Prvni nar. 1996-06-02 hraje v týmu s id 2 na pozici s id 2 - Obrana\n",
+            "Hráč s id 2 Pavel Druhy nar. 2000-09-09 hraje v týmu s id 1 na pozici s id 3 - Brankar\n",
+            "Hráč s id 3 Kuba Treti nar. 1998-01-05 hraje v týmu s id 3 na pozici s id 1 - Utocnik\n",
+            "Hráč s id 4 Josef Čtvrtý nar. 1997-01-06 hraje v týmu s id 6 na pozici s id 2 - Obrana\n",
+            "Hráč s id 5 Jirka Pátý nar. 1999-03-08 hraje v týmu s id 2 na pozici s id None - None\n",
+            "Hráč s id None None None nar. None hraje v týmu s id None na pozici s id 4 - Zaloha\n"
+          ]
+        }
+      ],
       "source": [
         "import mysql.connector\n",
-        "\n",
+        "from pripojeni import*\n",
         "mydb = mysql.connector.connect(\n",
-        "    host = \"dbs.spskladno.cz\"\n",
-        "    ,user = \"rekne_ucitel\"\n",
-        "    ,password = \"rekne_ucitel\"\n",
-        "    ,database = \"zavisi_na_useru\"\n",
+        "    host = HOST\n",
+        "    ,user = USER\n",
+        "    ,password = PASSWORD\n",
+        "    ,database = DATABASE\n",
         ")\n",
         "mycursor = mydb.cursor()\n",
         "\n",
-        "# TODO: Zde přijde váš kód ->\n",
+        "mycursor.execute(\"\"\"SELECT id, jmeno, prijmeni, datum_narozeni, tym_id, pozice_id,id_poz, pojmenovani FROM\n",
+        "    Hrac LEFT JOIN Pozice ON Hrac.pozice_id = Pozice.id_poz\n",
+        "    UNION\n",
+        "    SELECT id, jmeno, prijmeni, datum_narozeni, tym_id, pozice_id,id_poz, pojmenovani FROM\n",
+        "    Hrac RIGHT JOIN Pozice ON Hrac.pozice_id = Pozice.id_poz;\n",
+        "\"\"\")\n",
         "\n",
+        "myresult = mycursor.fetchall()\n",
+        "\n",
+        "for id, jmeno, prijmeni, datum_narozeni, tym_id, pozice_id, id_pozice, pojmenovani in myresult:\n",
+        "    print(f\"Hráč s id {id} {jmeno} {prijmeni} nar. {datum_narozeni} hraje v týmu s id {tym_id} na pozici s id {id_pozice} - {pojmenovani}\")\n",
         "\n",
         "mycursor.close()\n",
         "mydb.close()"
@@ -619,11 +716,8 @@
       "name": "Join_joinTriTabulek_zadani.ipynb",
       "provenance": []
     },
-    "interpreter": {
-      "hash": "c796eb3e3b883799f02af01b49c30e973f5d9f6ae7feb75a7f340683beca589a"
-    },
     "kernelspec": {
-      "display_name": "Python 3.10.0 64-bit (system)",
+      "display_name": "venv (3.13.3)",
       "language": "python",
       "name": "python3"
     },
@@ -637,7 +731,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.0"
+      "version": "3.13.3"
     },
     "orig_nbformat": 4
   },
